# OPTICS

./: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.ac  configure.scan  index.html  reconf
Rscript/: OPTICS_Result.R  OPTICS_Result_ang.R
doc/html/: annotated.html  config_8h-source.html  config_8h.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  index.html  optics_8c.html  optics_8h-source.html  optics_8h.html  parse__args_8c.html  parse__args_8h-source.html  parse__args_8h.html  structArg.html  structEpsn.html  structOpticsDat.html  structPar.html  structPt.html
doc/latex/: annotated.tex  config_8h.tex  doxygen.sty  files.tex  optics_8c.tex  optics_8h.tex  parse__args_8c.tex  parse__args_8h.tex  refman.tex  structArg.tex  structEpsn.tex  structOpticsDat.tex  structPar.tex  structPt.tex
src/: Makefile  Makefile.am  Makefile.in  arg.c  arg.h  config.h  config.h.in  config.h.in~  coords_ang.c  coords_ang.h  coords_dist.c  coords_dist.h  coords_str.c  coords_str.h  coords_vec.c  coords_vec.h  coords_xyz.c  coords_xyz.h  matrix.c  optics.c  optics.h  optics_ang  optics_dist  optics_str  optics_vec  optics_xyz  safe.h  sort.c  sort.h  tags  vector.c  vector.h
src/.deps/: arg.Po  coords_ang.Po  coords_dist.Po  coords_str.Po  coords_vec.Po  coords_xyz.Po  matrix.Po  optics.Po  safe.Po  sort.Po  vector.Po
tests/: Makefile  Makefile.am  Makefile.in  clean_test.sh  machine_file  test.out  test_ang.sh  test_dist.sh  test_jcics.sh  test_mpi.sh  test_nested.sh  test_string.sh  test_vector.sh  test_xyz.sh
