#===============================================================================
# Makefile.am : for automake
# (C) 2008-2012 Jens Kleinjung and Alessandro Pandini
# Read the COPYING file for license information.
#===============================================================================

SUBDIRS = src tests

EXTRA_DIST = Rscript doc 

