#===============================================================================
# Makefile.am : for automake
#===============================================================================

noinst_DATA = \
100.dat \
ang.dat \
dist.dat \
jcics.dat \
nested.dat \
point.dat \
string.dat \
vector.dat

noinst_SCRIPTS = \
clean_test.sh \
test_xyz.sh \
test_dist.sh \
test_ang.sh \
test_jcics.sh \
test_nested.sh \
test_string.sh \
test_vector.sh

EXTRA_DIST = $(noinst_DATA) $(noinst_SCRIPTS)

TESTS = $(noinst_SCRIPTS)

